deleted some files and changed some words

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <span class="multiple-text"></span>
                 </div>
                 <div class="home-btn-group">
-                    <a  href="img/AARON PUNZALAN RESUME.pdf" class="home-btn" download>Download Resume</a>
-                    <a href="#contact" class="home-btn">Work With Me</a>
+                    <a  href="img/AARON PUNZALAN RESUME.pdf" class="home-btn" download>Resume</a>
+                    <a href="#contact" class="home-btn">Hire Me</a>
                 </div>
 
                 <div class="home-socials">
