--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- FONT AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- MAIN CSS-->
-    <link rel="stylesheet" href="Style/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
@@ -490,7 +490,7 @@
        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
        <!-- MAIN JAVASCRIPT -->
-    <script src="JS/main.js"></script>
+    <script src="main.js"></script>
     
 </body>
 </html>
