changed some words

--- a/index.html
+++ b/index.html
@@ -172,35 +172,42 @@
         </div>
 
         <div class="work-grid">
+
             <div class="work-card">
                     <img src="/img/is2.jpg" alt="">
                     <h3>Inventory System</h3>
 
                     <div class="tech-stack">
                         <div class="tooltip">
-                        <img src="/img/angular.webp" alt="Angular Logo">
-                        <span class="tooltiptext">Angular</span>
+                            <img src="/img/angular.webp" alt="">
+                            <span class="tooltiptext">Angular</span>
                         </div>
-                         <div class="tooltip">
-                        <img src="/img/ts.webp" alt="Angular Logo">
-                        <span class="tooltiptext">Typescript</span>
-                        </div>
+
                         <div class="tooltip">
-                        <img src="/img/css-logo.webp" alt="Angular Logo">
-                        <span class="tooltiptext">CSS</span>
+                            <img src="/img/ts.webp" alt="">
+                            <span class="tooltiptext">Typescript</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/postgresql.svg" alt="PostgreSQL Logo">
-                        <span class="tooltiptext">PostgreSQL</span>
+                            <img src="/img/css-logo.webp" alt="">
+                            <span class="tooltiptext">CSS</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/csharp.webp" alt="C# Logo">
-                        <span class="tooltiptext">C#</span>
+                            <img src="/img/postgresql.svg" alt="">
+                            <span class="tooltiptext">PostgreSQL</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/net.webp" alt=".NET Logo">
-                        <span class="tooltiptext">.NET</span>
+                            <img src="/img/csharp.webp" alt="">
+                            <span class="tooltiptext">C#</span>
                         </div>
+
+                        <div class="tooltip">
+                            <img src="/img/net.webp" alt="">
+                            <span class="tooltiptext">.NET</span>
+                        </div>
+
                     </div>
                     <div class="work-btn-group">
                     <a href="javascript:void(0);" onclick="openSlider(this)" data-project="project1" class="work-btn">Gallery</a>
@@ -211,32 +218,39 @@
             <div class="work-card">
                 <img src="/img/pms3.jpg" alt="">
                 <h3>Performance Management System</h3>
+
                 <div class="tech-stack">
                         <div class="tooltip">
-                        <img src="/img/angular.webp" alt="Angular Logo">
-                        <span class="tooltiptext">Angular</span>
+                            <img src="/img/angular.webp" alt="">
+                            <span class="tooltiptext">Angular</span>
                         </div>
+
                          <div class="tooltip">
-                        <img src="/img/ts.webp" alt="Angular Logo">
-                        <span class="tooltiptext">Typescript</span>
+                            <img src="/img/ts.webp" alt="">
+                            <span class="tooltiptext">Typescript</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/css-logo.webp" alt="Angular Logo">
-                        <span class="tooltiptext">CSS</span>
+                            <img src="/img/css-logo.webp" alt="">
+                            <span class="tooltiptext">CSS</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/postgresql.svg" alt="PostgreSQL Logo">
-                        <span class="tooltiptext">PostgreSQL</span>
+                            <img src="/img/postgresql.svg" alt="">
+                            <span class="tooltiptext">PostgreSQL</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/csharp.webp" alt="C# Logo">
-                        <span class="tooltiptext">C#</span>
+                            <img src="/img/csharp.webp" alt="">
+                            <span class="tooltiptext">C#</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/net.webp" alt=".NET Logo">
-                        <span class="tooltiptext">.NET</span>
+                            <img src="/img/net.webp" alt="">
+                            <span class="tooltiptext">.NET</span>
                         </div>
-                    </div>
+
+                </div>
                 <div class="work-btn-group">
                     <a href="javascript:void(0);" onclick="openSlider(this)" data-project="project2" class="work-btn">Gallery</a>
                 </div>
@@ -245,28 +259,35 @@
             <div class="work-card">
                 <img src="/img/obj1.jpg" alt="">
                 <h3>Objectiva</h3>
+
                 <div class="tech-stack">
                         <div class="tooltip">
-                        <img src="/img/angular.webp" alt="Angular Logo">
-                        <span class="tooltiptext">Angular</span>
+                            <img src="/img/angular.webp" alt="">
+                            <span class="tooltiptext">Angular</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/ts.webp" alt="Angular Logo">
-                        <span class="tooltiptext">Typescript</span>
+                            <img src="/img/ts.webp" alt="">
+                            <span class="tooltiptext">Typescript</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/css-logo.webp" alt="Angular Logo">
-                        <span class="tooltiptext">CSS</span>
+                            <img src="/img/css-logo.webp" alt="">
+                            <span class="tooltiptext">CSS</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/laravel.png" alt="PostgreSQL Logo">
-                        <span class="tooltiptext">Laravel</span>
+                            <img src="/img/laravel.png" alt="">
+                            <span class="tooltiptext">Laravel</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/mysql.webp" alt="C# Logo">
-                        <span class="tooltiptext">MySQL</span>
+                            <img src="/img/mysql.webp" alt="">
+                            <span class="tooltiptext">MySQL</span>
                         </div>
-                    </div>
+
+                </div>
+
                 <div class="work-btn-group">
                     <a href="https://objectiva.tech/" target="_blank" class="work-btn">Live Demo</a>
                     <a href="javascript:void(0);" onclick="openSlider(this)" data-project="project3" class="work-btn">Gallery</a>
@@ -276,24 +297,29 @@
             <div class="work-card">
                 <img src="/img/shub1.jpg" alt="">
                 <h3>Scent Hub</h3>
+
                 <div class="tech-stack">
                         <div class="tooltip">
-                        <img src="/img/react-logo.webp" alt="Angular Logo">
-                        <span class="tooltiptext">React</span>
+                            <img src="/img/react-logo.webp" alt="">
+                            <span class="tooltiptext">React</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/css-logo.webp" alt="Angular Logo">
-                        <span class="tooltiptext">CSS</span>
+                            <img src="/img/css-logo.webp" alt="">
+                            <span class="tooltiptext">CSS</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/node-logo.webp" alt="PostgreSQL Logo">
-                        <span class="tooltiptext">Node</span>
+                            <img src="/img/node-logo.webp" alt="">
+                            <span class="tooltiptext">Node.js</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/express.webp" alt="C# Logo">
-                        <span class="tooltiptext">Express</span>
+                            <img src="/img/express.webp" alt="">
+                            <span class="tooltiptext">Express.js</span>
                         </div>
-                    </div>
+
+                </div>
                 <div class="work-btn-group">
                     <a href="https://github.com/punz01/Scent-Hub" target="_blank" class="work-btn">Github Repo</a>
                     <a href="javascript:void(0);" onclick="openSlider(this)" data-project="project4" class="work-btn">Gallery</a>
@@ -303,20 +329,23 @@
             <div class="work-card">
                 <img src="/img/hallyu1.jpg" alt="">
                 <h3>Hallyu Verse</h3>
+
                 <div class="tech-stack">
                         <div class="tooltip">
-                        <img src="/img/angular.webp" alt="Angular Logo">
-                        <span class="tooltiptext">Angular</span>
+                            <img src="/img/angular.webp" alt="">
+                            <span class="tooltiptext">Angular</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/ts.webp" alt="Angular Logo">
-                        <span class="tooltiptext">Typescript</span>
+                            <img src="/img/ts.webp" alt="">
+                            <span class="tooltiptext">Typescript</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/tailwind-css.svg" alt="Angular Logo">
-                        <span class="tooltiptext">Tailwind CSS</span>
+                            <img src="/img/tailwind-css.svg" alt="">
+                            <span class="tooltiptext">Tailwind CSS</span>
                         </div>
-                    </div>
+                </div>
                 <div class="work-btn-group">
                     <a href="https://hallyu-verse.netlify.app/" target="_blank" class="work-btn">Live Demo</a>
                     <a href="https://github.com/punz01/Hallyu-Verse" target="_blank" class="work-btn">Github Repo</a>
@@ -327,16 +356,19 @@
             <div class="work-card">
                 <img src="/img/sole1.jpg" alt="">
                 <h3>Sole Vibe</h3>
+
                 <div class="tech-stack">
                         <div class="tooltip">
-                        <img src="/img/react-logo.webp" alt="Angular Logo">
-                        <span class="tooltiptext">React</span>
+                            <img src="/img/react-logo.webp" alt="">
+                            <span class="tooltiptext">React</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/tailwind-css.svg" alt="Angular Logo">
-                        <span class="tooltiptext">Tailwind CSS</span>
+                            <img src="/img/tailwind-css.svg" alt="">
+                            <span class="tooltiptext">Tailwind CSS</span>
                         </div>
-                    </div>
+
+                </div>
                 <div class="work-btn-group">
                     <a href="https://sole-vibe.netlify.app/" target="_blank" class="work-btn">Live Demo</a>
                     <a href="https://github.com/punz01/Sole-Vibe" target="_blank" class="work-btn">Github Repo</a>
@@ -347,16 +379,19 @@
             <div class="work-card">
                 <img src="/img/pine1.jpg" alt="">
                 <h3>Pinescape</h3>
+
                 <div class="tech-stack">
                         <div class="tooltip">
-                        <img src="/img/react-logo.webp" alt="Angular Logo">
-                        <span class="tooltiptext">React</span>
+                            <img src="/img/react-logo.webp" alt="">
+                            <span class="tooltiptext">React</span>
                         </div>
+
                         <div class="tooltip">
-                        <img src="/img/tailwind-css.svg" alt="Angular Logo">
-                        <span class="tooltiptext">Tailwind CSS</span>
+                            <img src="/img/tailwind-css.svg" alt="">
+                            <span class="tooltiptext">Tailwind CSS</span>
                         </div>
-                    </div>
+
+                </div>
                 <div class="work-btn-group">
                     <a href="https://pine-scape.netlify.app/" target="_blank" class="work-btn">Live Demo</a>
                     <a href="https://github.com/punz01/Pinescape" target="_blank" class="work-btn">Github Repo</a>
