removed / from images

--- a/index.html
+++ b/index.html
@@ -174,37 +174,37 @@
         <div class="work-grid">
 
             <div class="work-card">
-                    <img src="/img/is2.jpg" alt="">
+                    <img src="img/is2.jpg" alt="">
                     <h3>Inventory System</h3>
 
                     <div class="tech-stack">
                         <div class="tooltip">
-                            <img src="/img/angular.webp" alt="">
+                            <img src="img/angular.webp" alt="">
                             <span class="tooltiptext">Angular</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/ts.webp" alt="">
+                            <img src="img/ts.webp" alt="">
                             <span class="tooltiptext">Typescript</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/css-logo.webp" alt="">
+                            <img src="img/css-logo.webp" alt="">
                             <span class="tooltiptext">CSS</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/postgresql.svg" alt="">
+                            <img src="img/postgresql.svg" alt="">
                             <span class="tooltiptext">PostgreSQL</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/csharp.webp" alt="">
+                            <img src="img/csharp.webp" alt="">
                             <span class="tooltiptext">C#</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/net.webp" alt="">
+                            <img src="img/net.webp" alt="">
                             <span class="tooltiptext">.NET</span>
                         </div>
 
@@ -216,37 +216,37 @@
 
 
             <div class="work-card">
-                <img src="/img/pms3.jpg" alt="">
+                <img src="img/pms3.jpg" alt="">
                 <h3>Performance Management System</h3>
 
                 <div class="tech-stack">
                         <div class="tooltip">
-                            <img src="/img/angular.webp" alt="">
+                            <img src="img/angular.webp" alt="">
                             <span class="tooltiptext">Angular</span>
                         </div>
 
                          <div class="tooltip">
-                            <img src="/img/ts.webp" alt="">
+                            <img src="img/ts.webp" alt="">
                             <span class="tooltiptext">Typescript</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/css-logo.webp" alt="">
+                            <img src="img/css-logo.webp" alt="">
                             <span class="tooltiptext">CSS</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/postgresql.svg" alt="">
+                            <img src="img/postgresql.svg" alt="">
                             <span class="tooltiptext">PostgreSQL</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/csharp.webp" alt="">
+                            <img src="img/csharp.webp" alt="">
                             <span class="tooltiptext">C#</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/net.webp" alt="">
+                            <img src="img/net.webp" alt="">
                             <span class="tooltiptext">.NET</span>
                         </div>
 
@@ -257,32 +257,32 @@
             </div>
 
             <div class="work-card">
-                <img src="/img/obj1.jpg" alt="">
+                <img src="img/obj1.jpg" alt="">
                 <h3>Objectiva</h3>
 
                 <div class="tech-stack">
                         <div class="tooltip">
-                            <img src="/img/angular.webp" alt="">
+                            <img src="img/angular.webp" alt="">
                             <span class="tooltiptext">Angular</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/ts.webp" alt="">
+                            <img src="img/ts.webp" alt="">
                             <span class="tooltiptext">Typescript</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/css-logo.webp" alt="">
+                            <img src="img/css-logo.webp" alt="">
                             <span class="tooltiptext">CSS</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/laravel.png" alt="">
+                            <img src="img/laravel.png" alt="">
                             <span class="tooltiptext">Laravel</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/mysql.webp" alt="">
+                            <img src="img/mysql.webp" alt="">
                             <span class="tooltiptext">MySQL</span>
                         </div>
 
@@ -295,27 +295,27 @@
             </div>
 
             <div class="work-card">
-                <img src="/img/shub1.jpg" alt="">
+                <img src="img/shub1.jpg" alt="">
                 <h3>Scent Hub</h3>
 
                 <div class="tech-stack">
                         <div class="tooltip">
-                            <img src="/img/react-logo.webp" alt="">
+                            <img src="img/react-logo.webp" alt="">
                             <span class="tooltiptext">React</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/css-logo.webp" alt="">
+                            <img src="img/css-logo.webp" alt="">
                             <span class="tooltiptext">CSS</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/node-logo.webp" alt="">
+                            <img src="img/node-logo.webp" alt="">
                             <span class="tooltiptext">Node.js</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/express.webp" alt="">
+                            <img src="img/express.webp" alt="">
                             <span class="tooltiptext">Express.js</span>
                         </div>
 
@@ -327,22 +327,22 @@
             </div>
 
             <div class="work-card">
-                <img src="/img/hallyu1.jpg" alt="">
+                <img src="img/hallyu1.jpg" alt="">
                 <h3>Hallyu Verse</h3>
 
                 <div class="tech-stack">
                         <div class="tooltip">
-                            <img src="/img/angular.webp" alt="">
+                            <img src="img/angular.webp" alt="">
                             <span class="tooltiptext">Angular</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/ts.webp" alt="">
+                            <img src="img/ts.webp" alt="">
                             <span class="tooltiptext">Typescript</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/tailwind-css.svg" alt="">
+                            <img src="img/tailwind-css.svg" alt="">
                             <span class="tooltiptext">Tailwind CSS</span>
                         </div>
                 </div>
@@ -354,17 +354,17 @@
             </div>
 
             <div class="work-card">
-                <img src="/img/sole1.jpg" alt="">
+                <img src="img/sole1.jpg" alt="">
                 <h3>Sole Vibe</h3>
 
                 <div class="tech-stack">
                         <div class="tooltip">
-                            <img src="/img/react-logo.webp" alt="">
+                            <img src="img/react-logo.webp" alt="">
                             <span class="tooltiptext">React</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/tailwind-css.svg" alt="">
+                            <img src="img/tailwind-css.svg" alt="">
                             <span class="tooltiptext">Tailwind CSS</span>
                         </div>
 
@@ -377,17 +377,17 @@
             </div>
 
             <div class="work-card">
-                <img src="/img/pine1.jpg" alt="">
+                <img src="img/pine1.jpg" alt="">
                 <h3>Pinescape</h3>
 
                 <div class="tech-stack">
                         <div class="tooltip">
-                            <img src="/img/react-logo.webp" alt="">
+                            <img src="img/react-logo.webp" alt="">
                             <span class="tooltiptext">React</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="/img/tailwind-css.svg" alt="">
+                            <img src="img/tailwind-css.svg" alt="">
                             <span class="tooltiptext">Tailwind CSS</span>
                         </div>
 
