made some changes in js file

--- a/index.html
+++ b/index.html
@@ -174,17 +174,17 @@
         <div class="work-grid">
 
             <div class="work-card">
-                    <img src="img/is2.jpg" alt="">
+                    <img src="img/is2.jpg" alt="Inventory System Picture">
                     <h3>Inventory System</h3>
 
                     <div class="tech-stack">
                         <div class="tooltip">
-                            <img src="img/angular.webp" alt="">
+                            <img src="img/angular.webp" alt="Angular Logo">
                             <span class="tooltiptext">Angular</span>
                         </div>
 
                         <div class="tooltip">
-                            <img src="img/ts.webp" alt="">
+                            <img src="img/ts.webp" alt="Typescript Logo">
                             <span class="tooltiptext">Typescript</span>
                         </div>
 
