--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <!-- HEADER SECTION DESIGN -->
      <header class="header">
-        <a href="#me" class="logo">
+        <a href="#home" class="logo">
              <img src="img/logo.png" alt="Logo">
         </a>
 
